# CodePilotAI

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/app/api/: dependencies.py
backend/app/api/v1/routes/: auth.py
backend/app/core/: config.py  security.py
backend/app/database/: session.py
backend/app/models/: token.py  user.py
backend/app/repositories/: user.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
backend/app/utils/: exceptions.py
backend/migrations/: env.py
backend/migrations/versions/: 4a7b05cbde06_initial_user_table.py  ae46816f568a_create_token_table.py
backend/tests/: test_auth_service.py
