[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[all]>=0.139.2",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
